Seemingly functional multi-core version.  Corrects some bugs as well.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /Isidore.Matlab/obj/x64/Release
 /Isidore.Render/Shapes/Billboard - Copy.cs
 /Isidore.Render/Shapes/Mesh - Copy.cs
+/Isidore.Render/RayTracer/Body - Copy.cs
