--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@
 /Isidore_Tests/OutputData - Copy MC Old/Models/ScatterPointTurbulence/Outputs_SPT
 /Isidore_Tests/OutputData - Copy MC Old/Models/TurbulencePointWFS/Output_TP_WFS
 /Isidore_Tests/OutputData - Copy MC Old/Models/TurbulentNoise/Output
+*.bak
