Fixes bugs in the Billboard class
This fixes a bug in the Billboard where it basically behaved as an infinite plane if the UV mapping is turned off.  As a result, it always calculated the UV coordinates.

--- a/Isidore_Tests/Isidore_Tests.csproj
+++ b/Isidore_Tests/Isidore_Tests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Render\ProceduralTextureTest.cs" />
     <Compile Include="Render\ProceduralMixingValueTest.cs" />
     <Compile Include="Models\ModelsTests.cs" />
+    <Compile Include="Render\ShapeTraceBillboard.cs" />
     <Compile Include="Render\TextureTest.cs" />
     <Compile Include="Render\ProceduralValueTest.cs" />
     <Compile Include="Render\NoiseFunctionTest.cs" />
