Addded the Net class.
Added a Net class for supporting .NET data and operations from applications like Matlab (But not just Matlab).  This commit includes GetValue methods for extracting field and subfields from 1D and 2D arrays.

--- a/Isidore.Matlab/Isidore.Matlab.csproj
+++ b/Isidore.Matlab/Isidore.Matlab.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MatLab.cs" />
+    <Compile Include="Net.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
